in development res result

--- a/frontend/src/app/snmp/snmp.component.html
+++ b/frontend/src/app/snmp/snmp.component.html
@@ -1,13 +1,14 @@
 <p>snmp works!</p>
-<div *ngIf='done'>Порт в: {{this.receivedSpeed[0].toString().slice(0, -6)}} мб</div>
-<div *ngIf='done'>{{this.receivedSpeed[1] == '1' ? ' admin Up': ' admin down'}}</div>
-<div *ngIf='done'>{{this.receivedSpeed[2] == '1' ? ' link Up': ' link down'}}</div>
+<div *ngIf='done'>MAC: {{this.receivedSnmp[0] == undefined ? 'нет мака' : this.receivedSnmp[0]}}</div>
+<div *ngIf='done'>Порт в: {{this.receivedSnmp[1].toString().slice(0, -6)}} мб</div>
+<div *ngIf='done'>{{this.receivedSnmp[2] == '1' ? ' admin Up': ' admin down'}}</div>
+<div *ngIf='done'>{{this.receivedSnmp[3] == '1' ? ' link Up': ' link down'}}</div>
 <div>
-    <input type="text" name='ip' [(ngModel)]='speed.ip' />
-    <input type="text" name='sw' [(ngModel)]='speed.sw' />
+    <input type="text" name='sw' [(ngModel)]='snmp.sw' />
+    <input type="text" name='port' [(ngModel)]='snmp.port' />
 </div>
 <div>
-    <button (click)='submit(speed)'>найти</button>
+    <button (click)='submit(snmp)'>найти</button>
 </div>
 
 <!-- .toString().slice(0, -6) -->
