--- a/frontend/src/app/snmp/snmp.component.scss
+++ b/frontend/src/app/snmp/snmp.component.scss
@@ -9,3 +9,14 @@
        height: 20px;
     }
 }
+.error {
+    border: 2px solid black;
+    margin-bottom: 15px;
+    tr {
+        text-align: center;
+    }
+    td {
+       width: 100px; 
+       height: 20px;
+    }
+}
