--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,12 +1,8 @@
-<h1>telnet app</h1>
+<h1>telnet app test</h1>
 <div>
 </div>
 <div>
 <app-snmp></app-snmp>
-<ul>
-    <!-- <li *ngFor="let ips of snmp">
-      <span>{{ips}}</span> -->
-    <!-- </li> -->
-  </ul>
+<app-scan></app-scan>
 </div>
 
