--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import "@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "@fortawesome/fontawesome-free/scss/solid.scss";
+@import "@fortawesome/fontawesome-free/scss/regular.scss";
+@import "@fortawesome/fontawesome-free/scss/brands.scss";
+// MDB SCSS
+@import "mdb-angular-ui-kit/assets/scss/mdb.scss";
+
 body {
     background-color: #1b1b1b;
-    color: aliceblue;
+    color: #f0f8ff;
 }
+
